rm unneeded folder carousel/icons modifies dot-kontur-icon.js to display carousel-dots correctly rm definition activeIndex from index.js modify test and snapshot to pass test modify styles.module.styl to hide carousel-scrollbar in firefox

--- a/gatsby-theme-untied/src/components/Carousel/styles.module.styl
+++ b/gatsby-theme-untied/src/components/Carousel/styles.module.styl
@@ -18,14 +18,12 @@
     scroll-snap-type: x mandatory
     scroll-behavior: smooth
     -webkit-overflow-scrolling: touch
-
+    scrollbar-width: none
 
   .carousel-slides::-webkit-scrollbar
     display: none
-
   .carousel-slides::-webkit-scrollbar-thumb
     display: none
-
   .carousel-slides::-webkit-scrollbar-track
     display: none
 
@@ -54,6 +52,7 @@
     display: flex
     justify-content: center
     list-style-type: none
+    margin-left: 0
 
     +above('m')
       display: none
@@ -61,14 +60,14 @@
     li
       width: 20px
       height: 18px
-      border: 0px solid primary-color
       border-radius: 50%
       margin-right: 10px
       text-align: center
-      &:active
-        background: primary-color
 
-        .carousel-indicator
-          width: 20px
-          height: 20px
-          border: 0px solid primary-color
+    li:hover
+      background: primary-color
+
+      .carousel-indicator
+        width: 20px
+        height: 20px
+        border: 0px solid primary-color
